@@ -1,0 +1,7 @@
+<html>
+<body>
+<iframe src="test.htm" width="100%"/>
+<iframe src="test2.htm" width="100%"/>
+<iframe src="frames.htm" width="100%"/>
+</body>
+</html>
